--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         <div class="cont">
             <h1>TODo List</h1>
             <div class="search">
-                <div class="sea"></div>
-                <div class="but"></div>
+                <div class="sea"><input type="text" id="sea"></div>
+                <div class="but"><button>Add</button></div>
+            </div>
+            <div class="todo">
+
             </div>
 
         </div>
