--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
                 <div class="but"><button>Add</button></div>
             </div>
             <div class="todo">
+                <h2>ToDo List</h2>
+                <div class="main">
+                    <div class="hii">
+                        <div>List</div>
+                        <div>Status</div>
+                        <div>close</div>
+                    </div>
+                    <div class="task"></div>
+                    <div class="task"></div>
+                    <div class="task"></div>
+                    <div class="task"></div>
+                </div>
 
             </div>
 
